# grip-ai

./: .gitignore  CHANGELOG.md  CHANGES.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md
grip/: __init__.py
grip/api/routers/: management.py
grip/channels/: telegram.py
grip/cli/: app.py  gateway_cmd.py  status_cmd.py
grip/config/: schema.py
grip/engines/: sdk_engine.py
grip/memory/: __init__.py  archiver.py  semantic.py
grip/tools/: __init__.py  shell.py  web.py  web_search_plus.py
grip/workspace/: manager.py
tests/: test_context.py
tests/engines/: test_sdk_hooks.py
tests/tools/: test_shell_deny.py
